--- a/style.css
+++ b/style.css
@@ -43,8 +43,8 @@
 /* .sidebar h3 {
 	background-image: repeating-linear-gradient(
 		90deg,
-		rgba(8, 140, 192, 0.3) 0%,
-		rgba(8, 140, 192, 0.3) 50%,
+		rgba(27, 124, 38, 0.3) 0%,
+		rgba(27, 124, 38, 0.3) 50%,
 		rgba(57, 188, 128, 0.3) 50%,
 		rgba(57, 188, 128, 0.3) 100%
 	);
@@ -57,7 +57,7 @@
 	background: none;
 	padding: 12px 35px 12px 15px;
 	background-color: #c4ebd9;
-	color: #088cc0;
+	color: #1b7c26;
 	margin-top: 26px;
 }
 .sidebar h3::before {
@@ -117,7 +117,7 @@
 	line-height: 1.6;
 	margin-bottom: 1em;
 	font-size: 0.85rem;
-	color: #3cb8f1;
+	color: #1b7c26;
 }
 .sidebar .toc-content > ol > li,
 .sidebar .toc-content > ul > li {
@@ -162,15 +162,15 @@
 	/*profile背景色の変更*/
 	background: -webkit-linear-gradient(
 		0deg,
-		rgba(28, 189, 255, 1) 0%,
-		rgba(55, 219, 255, 1) 51.39%,
-		rgba(70, 205, 255, 1) 100%
+		rgba(27, 124, 38, 0.3) 0%,
+		rgba(42, 154, 83, 0.3) 51.39%,
+		rgba(57, 188, 128, 0.3) 100%
 	);
 	background: linear-gradient(
 		90deg,
-		rgba(28, 189, 255, 1) 0%,
-		rgba(55, 219, 255, 1) 51.39%,
-		rgba(70, 205, 255, 1) 100%
+		rgba(27, 124, 38, 0.3) 0%,
+		rgba(42, 154, 83, 0.3) 51.39%,
+		rgba(57, 188, 128, 0.3) 100%
 	);
 	border-radius: 200px 200px 0px 0px / 100px 100px 0px 0px;
 	color: #fff;
@@ -180,7 +180,7 @@
 }
 .sidebar .author-box .author-name a {
 	/*profile名前の色変更*/
-	color: #42ace7;
+	color: #1b7c26;
 	text-decoration: none;
 	letter-spacing: 1px;
 	font-size: 18px;
@@ -262,9 +262,9 @@
 	text-align: center;
 	text-decoration: none;
 	/*profileアイコンの色変更*/
-	color: #46cdff;
+	color: #1b7c26;
 	/*影の色変更*/
-	box-shadow: 0 0 10px rgba(66, 172, 231, 0.5), 0 0 5px -5px rgba(66, 172, 231);
+	box-shadow: 0 0 10px rgba(27, 124, 38, 0.3), 0 0 5px -5px rgba(27, 124, 38);
 	top: 105px;
 	right: 45px;
 	font-size: 0.9em;
@@ -328,15 +328,15 @@
 .article h2 {
 	background-image: repeating-linear-gradient(
 		90deg,
-		rgba(8, 140, 192, 0.3) 0%,
-		rgba(8, 140, 192, 0.3) 50%,
+		rgba(27, 124, 38, 0.3) 0%,
+		rgba(27, 124, 38, 0.3) 50%,
 		rgba(57, 188, 128, 0.3) 50%,
-		rgba(57, 188, 128, 0.3) 100%
+		rgba(90, 148, 122, 0.3) 100%
 	);
 	color: black;
 }
 .article h2::before {
-	background: #088cc0;
+	background: #1b7c26;
 }
 .article h2::after {
 	background: #39bc80;
@@ -344,13 +344,13 @@
 
 /*本文見出しh3の変更*/
 .article h3 {
-	border: 2px solid rgba(8, 140, 192, 0.8);
+	border: 2px solid rgba(27, 124, 38, 0.8);
 }
 .article h3::before {
-	background-color: #088cc0;
+	background-color: #1b7c26;
 }
 .article h3::after {
-	background-color: #088cc0;
+	background-color: #1b7c26;
 }
 
 /*本文見出しh4の変更*/
@@ -359,7 +359,7 @@
 }
 
 .article h4::before {
-	background-color: #4c79c3;
+	background-color: #1b7c26;
 }
 
 .article h4::after {
@@ -370,8 +370,8 @@
 .article h5::after {
 	background-image: linear-gradient(
 		135deg,
-		#4c79c3 0%,
-		#4c79c3 50%,
+		#1b7c26 0%,
+		#1b7c26 50%,
 		#2fa770 50%,
 		#2fa770 100%,
 		transparent 0
@@ -388,11 +388,11 @@
 ==========================================*/
 .toc-title {
 	color: #d3d3d3;
-	background-color: rgba(50, 97, 171, 0.8);
+	background-color: rgba(27, 124, 38, 0.3);
 }
 .toc-content {
 	color: #043e0d;
-	border: 2px solid rgba(50, 97, 171, 0.8);
+	border: 2px solid rgba(27, 124, 38, 0.3);
 }
 
 /*==========================================
@@ -405,17 +405,17 @@
 #index-tab-4:checked ~ .index-tab-buttons .index-tab-button[for="index-tab-4"] {
 	background-image: repeating-linear-gradient(
 		90deg,
-		#b9d3e5 0%,
-		#b9d3e5 50%,
-		#bce4d2 50%,
-		#bce4d2 100%
+		#1b7c26 0%,
+		#1b7c26 50%,
+		#39bc80 50%,
+		#39bc80 100%
 	);
-	border: 1px solid #b9d3e5;
-	color: #1b4868;
+	border: 1px solid #1b7c26;
+	color: #1b7c26;
 }
 .index-tab-buttons .index-tab-button {
-	border-color: #b9d3e5;
-	color: #1b4868;
+	border-color: #1b7c26;
+	color: #1b7c26;
 }
 
 /*コメントフォーム*/
