--- a/style.css
+++ b/style.css
@@ -285,6 +285,26 @@ div.item-label {
 /* □■-----------------------------------------------------
 / 『見出し（h2）』
 -----------------------------------------------------■□ */
+/* .article h2 {
+	position: relative;
+	padding: 0.8em 0.8em 0.8em 1.8em;
+	background: #333333;
+	color: #e9e9e9;
+	margin-bottom: 30px;
+	font-size: 22px;
+	font-weight: bold;
+}
+
+.article h2 ::before {
+	position: absolute;
+	content: "";
+	top: 100%;
+	left: 0;
+	border: none;
+	border-bottom: solid 15px transparent;
+	border-right: solid 20px #222222;
+} */
+
 .article h2 {
 	background-image: repeating-linear-gradient(
 		90deg,
@@ -293,7 +313,7 @@ div.item-label {
 		#444444 50%,
 		#444444 100%
 	);
-	/* background-color: #333333; */
+	background-color: #333333;
 	color: #e9e9e9;
 	border: 0;
 	position: relative;
@@ -331,6 +351,15 @@ div.item-label {
 /* □■-----------------------------------------------------
 / 『見出し（h3）』
 -----------------------------------------------------■□ */
+/* .article h3 {
+	position: relative;
+	padding: 0.4em 0.5em;
+	color: #333333;
+	background: #e9e9e9;
+	border-left: solid 5px #1b7c26;
+	border-bottom: solid 3px #d7d7d7;
+} */
+
 .article h3 {
 	position: relative;
 	padding: 0.75em 1.5em 0.75em 1.5em;
@@ -365,6 +394,22 @@ div.item-label {
 /* □■-----------------------------------------------------
 / 『見出し（h4）』
 -----------------------------------------------------■□ */
+/* .article h4 {
+	color: #333333;
+	position: relative;
+	padding: 0.5em;
+	display: inline-block;
+	line-height: 1.3;
+	background: #dbebf8;
+	vertical-align: middle;
+	border-radius: 25px 0px 0px 25px;
+}
+.article h4::before {
+	content: "●";
+	color: #e9e9e9;
+	margin-right: 8px;
+} */
+
 .article h4 {
 	margin-top: 26px;
 	background: 0 0;
@@ -970,8 +1015,8 @@ table tr:nth-of-type(2n) {
 -----------------------------------------------------■□ */
 .mobile-header-menu-buttons.mobile-menu-buttons > li:nth-of-type(3n + 1),
 .mobile-footer-menu-buttons.mobile-menu-buttons > li:nth-of-type(3n + 1) {
-	background-color: #333333;
-	color: #e9e9e9;
+	background-color: #e9e9e9;
+	color: #333333;
 }
 .mobile-header-menu-buttons.mobile-menu-buttons > li:nth-of-type(3n + 2),
 .mobile-footer-menu-buttons.mobile-menu-buttons > li:nth-of-type(3n + 2) {
@@ -980,9 +1025,26 @@ table tr:nth-of-type(2n) {
 }
 .mobile-header-menu-buttons.mobile-menu-buttons > li:nth-of-type(3n + 3),
 .mobile-footer-menu-buttons.mobile-menu-buttons > li:nth-of-type(3n + 3) {
+	background-color: #e9e9e9;
+	color: #333333;
+}
+/*不具合のため保留*/
+/* .mobile-header-menu-buttons.mobile-menu-buttons > li:nth-of-type(3n + 3) {
 	background-color: #333333;
 	color: #e9e9e9;
 }
+.mobile-header-menu-buttons.mobile-menu-buttons > li:nth-of-type(3n + 2) {
+	background-color: #e9e9e9;
+	color: #333333;
+}
+.mobile-header-menu-buttons.mobile-menu-buttons > li:nth-of-type(3n + 3) {
+	background-color: #333333;
+	color: #e9e9e9;
+}
+.mobile-footer-menu-buttons.mobile-menu-buttons > li {
+	background-color: #e9e9e9;
+	color: #333333;
+} */
 
 .menu-drawer a {
 	background-color: #333333;
