--- a/style.css
+++ b/style.css
@@ -1045,21 +1045,21 @@ table th,
 table td,
 .scrollable-table th,
 .scrollable-table td {
-	border: solid 1px white;
+	border: solid 1px #333333;
 }
 
 table th,
 .scrollable-table th {
 	background-color: #333333;
-	color: #9da5a0;
+	color: #ffffff;
 }
 
 table tr:nth-of-type(2n + 1) {
-	background-color: #9db09f;
+	background-color: #efefef;
 }
 
 table tr:nth-of-type(2n) {
-	background-color: #9da5b0;
+	background-color: #f0f0f0;
 }
 
 /* □■-----------------------------------------------------
