--- a/post/style.css
+++ b/post/style.css
@@ -1,7 +1,7 @@
 /*
   Skin Name: モノクロ
-  Description: モノクロを基調としたスキンです。
-  Skin URI: https://yurukei-career.com/design/mono-skin
+  Description: モノクロを基調としています。
+  Skin URI: https://yurukei-career.com
   Author: yurukei20
   Author URI: https://yurukei-career.com
   Screenshot URI:https://im-cocoon.net/wp-content/uploads/skin-mono.png
@@ -12,6 +12,12 @@
 /* □■-----------------------------------------------------
 / 『ヘッダーロゴ』
 -----------------------------------------------------■□ */
+@media screen and (max-width: 834px) {
+	/*トップページモバイルボタンの真下にスペースを作る*/
+	/* .container {
+    margin-top: 50px;
+  } */
+}
 .logo-image {
 	padding: 0;
 	margin-left: 20px;
@@ -52,8 +58,34 @@
 	justify-content: flex-start;
 	margin-left: 20px;
 }
-/*ヘッダー下の影を非表示*/
+/*グローバルメニューの高さ調整*/
+/* #navi .navi-in > ul li {
+	height: 80px;
+	line-height: 80px;
+} */
+/*グローバルメニューの文字大きさ調整*/
+/* #navi .navi-in > .menu-header .item-label {
+	font-size: 18px;
+} */
+/* .navi-in > ul .sub-menu a {
+	padding: 0;
+} */
+/*サブメニュー*/
+/* .sub-menu {
+	box-shadow: 0px 2px 5px 0 rgba(0,0,0,.26);
+} */
+/*サブメニューを仕切る点線*/
+/* .sub-menu .caption-wrap {
+	border-top: dotted #dddddd;
+	background: #e9e9e9;
+	padding: 0 0 0 2em;
+	margin: 0;
+}
+.navi-in > ul .sub-menu a:hover {
+	transform: none !important;
+} */
 div#header-container {
+	/*ヘッダー下の影を非表示*/
 	box-shadow: none;
 }
 div.item-label {
@@ -291,10 +323,96 @@ div.item-label {
 	}
 }
 
+/* .article h2 {
+	background-image: repeating-linear-gradient(
+		90deg,
+		#333333 0%,
+		#333333 50%,
+		#444444 50%,
+		#444444 100%
+	);
+	background-color: #333333;
+	color: #e9e9e9;
+	border: 0;
+	position: relative;
+	padding: 0.8em 0.8em 0.8em 1.8em;
+	border-radius: 4px;
+	margin-bottom: 30px;
+	font-size: 22px;
+	font-weight: bold;
+}
+
+.article h2::before,
+.article h2::after {
+	position: absolute;
+	content: "";
+	border-radius: 100%;
+}
+
+.article h2::before {
+	top: 0.3em;
+	left: 0.3em;
+	z-index: 2;
+	width: 20px;
+	height: 20px;
+	background: #e9e9e9;
+}
+
+.article h2::after {
+	top: 0.6em;
+	left: 0.7em;
+	width: 15px;
+	height: 15px;
+	background: #9da5a0;
+} */
+
 /* □■-----------------------------------------------------
 / 『見出し（h3）』
 -----------------------------------------------------■□ */
 .article h3 {
+	padding: 0.5em 0.7em;
+	border-top: solid 3px #333333;
+	border-bottom: solid 3px #333333;
+	border-left: none;
+	border-right: none;
+	font-weight: bold;
+}
+
+/* .article h3 {
+	position: relative;
+	padding: 0.75em 1.5em 0.75em 1.5em;
+	border: 2px solid #333333;
+	border-radius: 4px;
+}
+
+.article h3::before {
+	position: absolute;
+	top: 0.5em;
+	left: 0.5em;
+	content: "";
+	width: 6px;
+	height: -webkit-calc(100% - 1em);
+	height: calc(100% - 1em);
+	background-color: #9da5a0;
+	border-radius: 4px;
+}
+
+.article h3::after {
+	position: absolute;
+	top: 0.5em;
+	right: 0.5em;
+	content: "";
+	width: 6px;
+	height: -webkit-calc(100% - 1em);
+	height: calc(100% - 1em);
+	background-color: #9da5a0;
+	border-radius: 4px;
+} */
+
+/* □■-----------------------------------------------------
+/ 『見出し（h4）』
+-----------------------------------------------------■□ */
+.article h4 {
 	position: relative;
 	padding: 0.4em 0.5em;
 	color: #333333;
@@ -303,24 +421,42 @@ div.item-label {
 	border-bottom: solid 3px #d7d7d7;
 }
 
-/* □■-----------------------------------------------------
-/ 『見出し（h4）』
------------------------------------------------------■□ */
-.article h4 {
-	color: #333333;
+/* .article h4 {
+	margin-top: 26px;
+	background: 0 0;
 	position: relative;
-	padding: 0.5em;
-	display: inline-block;
-	line-height: 1.3;
-	background: #dbebf8;
-	vertical-align: middle;
-	border-radius: 25px 0px 0px 25px;
+	padding: 11px 0 8px 28px;
+	border: 0;
+	border-bottom: 1px solid #333333;
 }
+
 .article h4::before {
-	content: "●";
-	color: #e9e9e9;
-	margin-right: 8px;
+	position: absolute;
+	top: 2px;
+	left: 5px;
+	content: "";
+	width: 8px;
+	height: 17px;
+	background-color: #333333;
+	transform: skew(-15deg);
+	-o-transform: skew(-15deg);
+	-moz-transform: skew(-15deg);
+	-webkit-transform: skew(15deg);
 }
+
+.article h4::after {
+	position: absolute;
+	top: 19px;
+	left: 5px;
+	content: "";
+	width: 8px;
+	height: 17px;
+	background-color: #333333;
+	transform: skew(-15deg);
+	-o-transform: skew(-15deg);
+	-moz-transform: skew(-15deg);
+	-webkit-transform: skew(-15deg);
+} */
 
 /* □■-----------------------------------------------------
 / 『見出し（h5）』
@@ -362,6 +498,22 @@ div.item-label {
 /* □■-----------------------------------------------------
 / 『サイドバーの見出し（h3）』
 -----------------------------------------------------■□ */
+/************************************
+ **サイドバーの見出し
+ ************************************/
+/* .sidebar h3 {
+	background-image: repeating-linear-gradient(
+		90deg,
+		rgba(27, 124, 38, 0.3) 0%,
+		rgba(27, 124, 38, 0.3) 50%,
+		rgba(57, 188, 128, 0.3) 50%,
+		rgba(57, 188, 128, 0.3) 100%
+	);
+	color: black;
+} */
+/*
+ **サイドバーそのものの変更
+ */
 .sidebar h3 {
 	background: none;
 	padding: 12px 35px 12px 15px;
@@ -790,6 +942,95 @@ blockquote cite {
 	font-size: 0.9em;
 }
 
+/* blockquote {
+	position: relative;
+	padding: 7px 16px;
+	box-sizing: border-box;
+	font-style: italic;
+	color: #464646;
+	border: solid 3px #9da5a0;
+	border-radius: 6px;
+	background-color: rgba(8, 140, 192, 0.06);
+	margin: 1.4em 0.5em;
+}
+blockquote:before {
+	display: inline-block;
+	position: absolute;
+	top: -20px;
+	left: -20px;
+	width: 40px;
+	height: 40px;
+	line-height: 40px;
+	border-radius: 50%;
+	text-align: center;
+	content: "\f10d";
+	font-family: FontAwesome;
+	background: #9da5a0;
+	color: #333333;
+	font-size: 22px;
+	font-weight: 900;
+}
+blockquote:after {
+	display: inline-block;
+	position: absolute;
+	bottom: -20px;
+	right: -20px;
+	width: 40px;
+	height: 40px;
+	line-height: 40px;
+	border-radius: 50%;
+	text-align: center;
+	content: "\f10e";
+	font-family: FontAwesome;
+	background: #9da5a0;
+	color: #333333;
+	font-size: 22px;
+	font-weight: 900;
+}
+blockquote p {
+	padding: 0;
+	margin: 10px 0;
+	line-height: 1.7;
+}
+
+blockquote cite {
+	display: block;
+	text-align: right;
+	color: #888888;
+	font-size: 0.9em;
+} */
+
+/* □■-----------------------------------------------------
+/ 『カレンダー』
+-----------------------------------------------------■□ */
+#wp-calendar th:nth-of-type(1) {
+	background-color: rgba(200, 239, 234, 0.6);
+}
+
+#wp-calendar th:nth-of-type(2) {
+	background-color: rgba(255, 251, 213, 0.6);
+}
+
+#wp-calendar th:nth-of-type(3) {
+	background-color: rgba(240, 208, 228, 0.6);
+}
+
+#wp-calendar th:nth-of-type(4) {
+	background-color: rgba(200, 239, 234, 0.6);
+}
+
+#wp-calendar th:nth-of-type(5) {
+	background-color: rgba(238, 245, 211, 0.6);
+}
+
+#wp-calendar th:nth-of-type(6) {
+	background-color: rgba(222, 223, 239, 0.6);
+}
+
+#wp-calendar th:nth-of-type(7) {
+	background-color: rgba(249, 223, 213, 0.6);
+}
+
 /* □■-----------------------------------------------------
 / 『テーブル』
 -----------------------------------------------------■□ */
@@ -817,6 +1058,21 @@ table tr:nth-of-type(2n) {
 /* □■-----------------------------------------------------
 / 『モバイルメニュー』
 -----------------------------------------------------■□ */
+/* .mobile-header-menu-buttons.mobile-menu-buttons > li:nth-of-type(3n + 1),
+.mobile-footer-menu-buttons.mobile-menu-buttons > li:nth-of-type(3n + 1) {
+	background-color: #e9e9e9;
+	color: #333333;
+}
+.mobile-header-menu-buttons.mobile-menu-buttons > li:nth-of-type(3n + 2),
+.mobile-footer-menu-buttons.mobile-menu-buttons > li:nth-of-type(3n + 2) {
+	background-color: #e9e9e9;
+	color: #333333;
+}
+.mobile-header-menu-buttons.mobile-menu-buttons > li:nth-of-type(3n + 3),
+.mobile-footer-menu-buttons.mobile-menu-buttons > li:nth-of-type(3n + 3) {
+	background-color: #e9e9e9;
+	color: #333333;
+} */
 .mobile-header-menu-buttons.mobile-menu-buttons > li:nth-of-type(3n + 1) {
 	background-color: #333333;
 	color: #e9e9e9;
@@ -887,6 +1143,20 @@ table tr:nth-of-type(2n) {
 	background-color: #9da5a0;
 	color: #e9e9e9;
 }
+
+/* .footer {
+	background-color: #7acbd1;
+	background-image: linear-gradient(
+			45deg,
+			#c9e5d9 0%,
+			#c9e5d9 57%,
+			#88b2a0 58%,
+			transparent 0
+		),
+		linear-gradient(-25deg, #50a8b0 0%, #50a8b0 37%, #32757b 38%, transparent 0);
+	box-shadow: -6px -8px 6px -1px rgba(0, 0, 0, 0.24),
+		-6px -6px 10px -3px rgba(0, 0, 0, 0.18);
+} */
 
 /* □■-----------------------------------------------------
 / 『プロフィール』
