--- a/style.css
+++ b/style.css
@@ -370,12 +370,12 @@ div.item-label {
 / 『見出し（h3）』
 -----------------------------------------------------■□ */
 .article h3 {
-	position: relative;
-	padding: 0.4em 0.5em;
-	color: #333333;
-	background: #e9e9e9;
-	border-left: solid 5px #333333;
-	border-bottom: solid 3px #d7d7d7;
+	padding: 0.5em 0.7em;
+	border-top: solid 3px #333333;
+	border-bottom: solid 3px #333333;
+	border-left: none;
+	border-right: none;
+	font-weight: bold;
 }
 
 /* .article h3 {
@@ -413,19 +413,12 @@ div.item-label {
 / 『見出し（h4）』
 -----------------------------------------------------■□ */
 .article h4 {
-	color: #333333;
 	position: relative;
-	padding: 0.5em;
-	display: inline-block;
-	line-height: 1.3;
-	background: #dbebf8;
-	vertical-align: middle;
-	border-radius: 25px 0px 0px 25px;
-}
-.article h4::before {
-	content: "●";
-	color: #e9e9e9;
-	margin-right: 8px;
+	padding: 0.4em 0.5em;
+	color: #333333;
+	background: #e9e9e9;
+	border-left: solid 5px #333333;
+	border-bottom: solid 3px #d7d7d7;
 }
 
 /* .article h4 {
